Fix bounding box of homepage links stretching too big

--- a/resources/public/css/site.css
+++ b/resources/public/css/site.css
@@ -107,17 +107,20 @@ html {
 
     > #homepage-excursus {
         grid-area: bl;
-        margin-top: 2em;
-        margin-left: auto;
         font-family: var(--font-title);
         font-size: 2em;
+        padding-top: 2em;
+
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
     }
 
     > #homepage-projects {
-        font-family: var(--font-title);
-        margin-top: 2em;
-        font-size: 2em;
         grid-area: br;
+        font-family: var(--font-title);
+        font-size: 2em;
+        padding-top: 2em;
     }
 
     > #homepage-start-msg {
